# TypeErasure

./: CMakeLists.txt  client.hpp  mock_client.hpp  type_erasure_test.cpp
